--- a/hm1v2/index.html
+++ b/hm1v2/index.html
@@ -2,10 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Mcduck</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<h1>Scrooge McDuck</h1>
+
+<p>Scrooge McDuck is a cartoon character created in 1947 by Carl Barks for The Walt Disney Company. Appearing in Disney
+    comics, Scrooge is a Scottish-American anthropomorphic Pekin duck. Like his nephew Donald Duck, he has a
+    yellow-orange bill, legs, and feet. He typically wears a red or blue frock coat, top hat, pince-nez glasses, and
+    spats. He is portrayed in animation as speaking with a Scottish accent. Originally intended to be used only once,
+    Scrooge became one of the most popular characters in Disney comics, and Barks's signature work. Scrooge lives in the
+    city of Duckburg (which is also Donald Duck's, and Huey, Dewey, and Louie's home city) in the fictional US state of
+    Calisota (a blend of California and Minnesota), whose claimed location is in California in the real-world United
+    States.[6]</p>
+
+<img src="https://upload.wikimedia.org/wikipedia/en/5/54/Scrooge_McDuck.png" alt="Scrooge McDuck">
+
+<h2>Comics history</h2>
+
+<p>First appearance
+    Further information: Christmas on Bear Mountain
+
+    One of Scrooge's first panels in Christmas on Bear Mountain
+    Scrooge McDuck, maternal uncle of previously established character Donald Duck, made his first named appearance in
+    the story Christmas on Bear Mountain which was published in Dell's Four Color Comics #178, October 22, 1947, written
+    and drawn by artist Carl Barks. His appearance may have been based on a similar-looking, Scottish "thrifty saver"
+    Donald Duck character from the 1943 propaganda short The Spirit of '43.
+<div class="line"></div>
+
+<ul>
+    <li>Uncle Scrooge McDuck, Carl Barks, Edward Summer, Walt Disney Productions 1981 ISBN 0-89087-290-2</li>
+    <li>The Carl Barks Library, Another Rainbow Publishing 1984</li>
+    <li>Scrooge McDuck Capitalist and Proud of it!, Goldbrick & Bond, USA-International Publications 2004</li>
+    <li>How to Read Donald Duck: Imperialist Ideology in the Disney Comic, Dorfman & Mattelart, International General
+        1975
+    </li>
+    <li>Carl Barks and the Disney Comic Book, University Press of Mississippi, Thomas Andrae 2006 ISBN 1-57806-858-4
+    </li>
+    <li>An Informal Biography of Scrooge McDuck, Jack Chalker, Mirage Press 1974 ISBN 0-88358-502-2</li>
+
+</ul>
 
 </body>
 </html>
